fix for background color and layout breaking after deploy

--- a/Frontend/public/index.css
+++ b/Frontend/public/index.css
@@ -1,4 +1,5 @@
 html, body, #app, #root, #app>div {
     height: 100% !important;
     margin: auto;
+    background: "white";
 }
